framec_tests/language_specific/python/v3_capabilities/system_params/negative/system_enter_param_missing_v3.frm
@target python_3
# @expect: E417

# Negative: system $>(...) params declared but start state has no $>() handler.

system SystemEnterParamMissing($(color), $>(enter_color), domain) {
    interface:
        run()

    machine:
        $Red(color) {
            run() {
                -> $Red(color)
            }
        }

    domain:
        domain = None
}

